--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>JTP: Main</title>
-      <script type="module" crossorigin src="/assets/main-B0EM_nKK.js"></script>
-      <link rel="modulepreload" crossorigin href="/assets/firebase-Cl_7x79Z.js">
-      <link rel="modulepreload" crossorigin href="/assets/Header-pecFP__v.js">
-      <link rel="stylesheet" crossorigin href="/assets/firebase-B3EFEGMR.css">
-      <link rel="stylesheet" crossorigin href="/assets/Header-JNJGB1Fc.css">
-      <link rel="stylesheet" crossorigin href="/assets/main-8kUQDFFU.css">
+      <script type="module" crossorigin src="/JTP/assets/main-BOGDlzdk.js"></script>
+      <link rel="modulepreload" crossorigin href="/JTP/assets/firebase-s2V9xmUb.js">
+      <link rel="modulepreload" crossorigin href="/JTP/assets/Header-kLIi7xif.js">
+      <link rel="stylesheet" crossorigin href="/JTP/assets/firebase-DPHkrsoh.css">
+      <link rel="stylesheet" crossorigin href="/JTP/assets/Header-CrDyGZTf.css">
+      <link rel="stylesheet" crossorigin href="/JTP/assets/main-8kUQDFFU.css">
     </head>
     <body>
         <div id="root"></div>
